# rapidx2j

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  binding.gyp  index.js  package-lock.json  package.json
.github/workflows/: ci.yml
src/: legacy.h  parser.cc  parser.h  rapidx2j.cc  v8_version.h
test/: 02-empty-attrib.js  03-block.js  03-blocktest.js  03-callback.js  03-cb.js  12-empty-values.js  async.js  attr_group.js  attr_ignore.js  attr_prefix.js  bignum.js  bool.js  buffer.js  case.js  empty_attr_value.js  empty_tag.js  explicit_array.js  explicit_object.js  float.js  include_root.js  int.js  number_parsing_bug.js  numbers.js  parse_async.js  simple.js  single.js  skip.js  test.xml  trim.js  types.js  value_key.js
types/: index.d.ts
